# TSP-solver

./: .gitignore  CMakeLists.txt  README.md  files.txt  tsp.sln
csv/: performance_profileBC10.csv  performance_profileBC40.csv  performance_profileBC70.csv  performance_profileHARD_FIX.csv  performance_profileSOFT_FIX.csv
dataset/: att48.tsp
include/: genetic_utils.h  plot.h  read_input.h  tsp.h  utils.h
latex_report/: bibliografia.tex  bibliography.bib  intro_cap1.tex  intro_cap2.tex  intro_cap3.tex  intro_cap4.tex  intro_cap5.tex  intro_code_setup.tex  references.tex  report_operational_research.blg  report_operational_research.out  report_operational_research.tex  ro2.doc  ro2.out  ro2.tex  ro2_Thomas_Porro.tex
latex_report/capitolo1/: sezione1.tex  sezione2.tex
latex_report/capitolo2/: basic_model.tex  gg.tex  mtz.tex
latex_report/capitolo3/: benders.tex  callback.tex  callback_fractional.tex
latex_report/capitolo4/: heuristic.tex  matheuristic.tex  metaheuristic.tex
latex_report/code_setup/: cplex_variables_constraints.tex  solution_data_management.tex
latex_report/compact_models/: basic_model.tex  gg.tex  mtz.tex
latex_report/heuristics/: heuristic.tex  metaheuristic.tex
latex_report/introduction/: sezione1.tex  sezione2.tex
latex_report/intros/: intro_code_setup.tex  intro_compact_models.tex  intro_heuristic_solutions.tex  intro_introduction.tex  intro_secs.tex
latex_report/model/: Modello_Tesi.tex  layout.tex  packages.tex
latex_report/results/: compact_models.tex  conclusion.tex  matheuristic.tex  metaheuristics.tex  sec.tex
latex_report/secs/: benders.tex
latex_report/sections/: callback.tex  euristics.tex  introduction.tex  setup.tex  solutions.tex
latex_report/useful_files/: 2-opt.drawio  extra_mileage.drawio  k-opt.drawio  variable_matrix.drawio
perfProf/: branc.csv  final_SEC.csv  final_math.csv  final_meta.csv  final_mtz_mtzlazy_gg.csv  perf_prof_BEND_BAC_BACRLX.csv  performance_profile(30inst).csv  performance_profile2.csv  perfprof.py
src/: genetic_utils.c  main.c  plot.c  read_input.c  tsp.c  utils.c
tsp/: CMakeLists.txt  files.txt  main.c  model.lp  performance_profile.csv  plot.c  plot.h  read_input.c  read_input.h  stats.txt  tsp.c  tsp.h  tsp.vcxproj  tsp.vcxproj.filters  utils.c  utils.h
tsp/PerfProf/: performance_profile(30inst).csv  performance_profile(30inst_20_to_50).csv  performance_profile.csv  read_me.txt
tsp/include/: plot.h  tsp.h  utils.h
tsp/src/: main.c  plot.c  read_input.c  tsp.c  utils.c
